# PoseCopy

./: .gitignore  README.md
base_controller/scripts/: base_control_gen3lite.py  posegrab.py
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/base_controller/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
catkin_ws/devel/.private/kortex_control/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/kortex_description/: .catkin  setup.sh
catkin_ws/devel/.private/kortex_driver/: .catkin  local_setup.sh
catkin_ws/devel/.private/kortex_gazebo/: .catkin  setup.sh
catkin_ws/devel/include/kortex_driver/: Action.h  ActionEvent.h  ActionExecutionState.h  ActionHandle.h  ActionList.h  ActionNotification.h  ActionNotificationList.h  ActionType.h  Action_action_parameters.h  ActivateMap.h  ActivateMapHandle.h  ActivateMapRequest.h  ActivateMapResponse.h  ActuatorCommand.h  ActuatorConfig_ClearFaults.h  ActuatorConfig_ClearFaultsRequest.h  ActuatorConfig_ClearFaultsResponse.h  (+1192 more)
catkin_ws/logs/kortex_driver/: build.cmake.000.log.stderr  build.cmake.005.log.stderr
catkin_ws/src/base_controller/: CMakeLists.txt
catkin_ws/src/controls/: CMakeLists.txt
catkin_ws/src/controls/launch/: controls.launch
catkin_ws/src/controls/scripts/: controls.py  pose_estimation.py
catkin_ws/src/kortex_driver/: CMakeLists.txt
(+3518 files in other folders)
